# Poybot

./: .dockerignore  .env.example  .gitignore  00_READ_ME_FIRST.txt  AUDIT_ARCHITECTURE_RESEAU.md  CLAUDE.md  Dockerfile  PROGRESS_TRACKER.xlsx  README.md  REPO_BENCHMARK.md  ROADMAP.md  START.sh  VISION.md  check_data.sh  data_audit.txt  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  playwright.config.js  pyproject.toml
artifacts/: Poybot_Specification_Technique_v1_0.docx
backend/: .env.example  .gitignore  Makefile  README.md  TRADING_SPEC.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_portfolio_and_bot_trades.py
backend/app/: main.py
backend/app/analytics/: market_analytics.py
backend/app/api/: deps.py  security.py
backend/app/api/v1/: live_routes.py  routes.py  wallet_routes.py
backend/app/clients/: clob.py  gamma.py  http_utils.py
backend/app/core/: logging.py  settings.py
backend/app/db/: session.py
backend/app/ingestion/: stream_manager.py  universe.py  ws_ingestor.py
backend/app/live/: pipeline.py  state.py
backend/app/models/: __init__.py  market_data.py
backend/app/repositories/: ingestion_repository.py  market_repository.py  portfolio_repository.py
backend/app/schemas/: common.py  market.py
backend/app/services/: adaptive_strategy.py  backtest_engine.py  backtest_exporter.py  latency_arb_engine.py  market_sync_service.py  monthly_report_service.py  order_signer.py  portfolio_service.py  price_state_cache.py  risk_guard.py  spread_arb_scanner.py  trade_backfill_service.py  trade_executor.py  wallet_auth.py
backend/app/utils/: polymarket.py
backend/app/workers/: tasks.py
backend/data/backtests/: bt-20260323212243-d21a2657.json
backend/docker/: Dockerfile
backend/scripts/: backtest.py  generate_monthly_report.py  init_db.py  sync_metadata.py
backend/tests/: conftest.py  test_adaptive_strategy.py  test_analytics.py  test_backtest_api.py  test_backtest_engine.py  test_backtest_export.py  test_health_api.py  test_ingestion_repository.py  test_latency_arb_engine.py  test_live_routes.py  test_live_state.py  test_market_sync_service.py  test_monthly_report_service.py  test_order_signer.py  test_price_state_cache.py  test_risk_guard.py  test_security.py  test_settings.py  test_spread_arb_scanner.py  test_trade_executor.py  test_universe_builder.py  test_wallet_auth.py  test_ws_ingestor.py
docs/: ARCHITECTURE.md  AUDIT_PAPER_TRADING_2026_05_17.md  CODE_REVIEW_RULES.md  DEPLOY.md  EXECUTION_PLAN_2026_05_12.md  INFRA.md  PHASE_A_BACKTESTER_DESIGN.md  PLAN_IMPLEMENTATION_2026_05_19.md  PR_CHECKLIST.md  ROUND_10_CAUSAL_INFERENCE.md  ROUND_11_CLOB_BOOK_MICROSTRUCTURE.md  ROUND_12_SOCIAL_AND_CROSS_MARKET.md  ROUND_13_CALIBRATION_AND_RESEARCH.md  ROUND_6_THE_SPINE.md  ROUND_7_MEMPOOL_AND_PREFILL.md  ROUND_8_STRATEGY_CLASSIFIER.md  ROUND_9_MULTIVARIATE_HAWKES.md  RUNBOOK-RECONCILIATION.md  SESSION_2026-05-10_RUNBOOK.md  UI_REDESIGN_PHASE3.md  backups.md  docker-setup.md  events.md  live-trading-setup.md  oracle-cloud-setup.md  ws_contract.md
docs/ADR/: ADR-PMK-014-ui-mission-alignment.md
docs/architecture/: data_flow.md  event_contract.md
docs/audit/: 01_data_inventory.md  02_client_audit.md  03_schema_evolution.md  04_perf_hotpaths.md  05_ml_pipeline.md  CHANGELOG.md  MASTER_REPORT.md
docs/autonomous_session_2026_05_15/: REPORT_01_T+1h.md  REPORT_02_T+2h.md  REPORT_03_T+2h45m.md  REPORT_04_T+4h.md  REPORT_05_T+5h.md  REPORT_06_T+6h.md  REPORT_07_T+7h.md  REPORT_08_T+8h.md  REPORT_09_T+9h.md  REPORT_10_T+10h.md  SESSION_FINAL.md
docs/autonomous_session_2026_05_17_strategy/: 00_DIAGNOSIS_AND_PLAN.md  01_DATA_OPTIMIZATION_PLAN.md  02_STRUCTURAL_FIX_PLAN.md  03_UI_REDESIGN_PROFESSIONAL.md  04_PRECOMPUTED_SNAPSHOT_ARCHITECTURE.md
docs/investigation_2026-05-19/: ex1_alpha_extras.md  ex2_total_profiles.md
docs/migrations/: 001_schema.sql  002_dashboard_compat.sql  003_v1_economic_spine.sql  004_portfolio_state.sql  005_neural_readiness.sql  006_system_control.sql  007_trades_observed_idempotency.sql  008_live_trades.sql  009_trades_category_denorm.sql  010_risk_config_history.sql  011_retention_policies.sql  012_liquidity_score_asof.sql  013_trades_observed_partition.sql  013_trades_observed_partition_DOWN.sql  014_partial_indexes.sql  015_position_tracker_state.sql  016_market_features_history.sql  017_hawkes_bivariate.sql  018_orderbook_features_minute.sql  (+36 more)
frontend/: .env.local.example  .gitignore  package-lock.json  package.json  tailwind.config.ts
reports/: backtest_strategy_2026_05_17_grid.json  backtest_strategy_2026_05_17_winning.json  leader_swing_gate_20x30_diag.json  leader_swing_gate_20x30_diag.md  leader_swing_smoke_5x7.json  leader_swing_smoke_5x7.md
research/: README.md  requirements.txt
scripts/: auto_label_strategies.py  backfill_decision_learning.py  backfill_gamma_resolutions_2026_05_17.py  backfill_market_features_history.py  backfill_orphan_market_stubs.sql  backfill_polymarket_trades.py  backtest.py  backtest_strategy_2026_05_17.py  backup_db.py  batch_runner.py  bootstrap_fee_snapshots.py  bootstrap_leaders.py  build_dashboard.mjs  build_dashboard.sh  cleanup_falcon_no_data_leaders.sql  disable_lab_gates_2026_05_19.py  docker_healthcheck.py  force_phase_upgrade.py  health_check.py  hetzner_cloud_init.yml  hetzner_post_ssh.sh  import_falcon_external_stats_2026_05_17.py  import_gamma_event_times_2026_05_17.py  invalidate_pre_v1_labels.py  maintenance_loop.py  monitor.sh  oracle_cloud_init.yml  oracle_post_ssh.sh  oracle_retry_launch.sh  orchestrate.py  reconciliation.py  replay_observed_trades.py  restore_db.py  run_all.py  run_session.sh  seed_decision_learning_2026_05_17.py  setup_db.py  test_connectivity.py  train_strategy_classifier.py  validate_session.sh
src/: config.py  logging_setup.py
templates/: dashboard.html  dashboard_v2.html
tests/: conftest.py  test_docker.py  test_logging_setup.py
tools/: generate_poybot_spec_docx.py
(+562 files in other folders)
