[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-bot"
version = "0.2.0"
description = "Polymarket Leader Intelligence Engine — identify, profile, and trade with/against volume leaders"
requires-python = ">=3.11"
dependencies = [
    "asyncpg==0.29.0",
    "aiohttp==3.9.3",
    "websockets==12.0",
    "pydantic==2.6.0",
    "pydantic-settings==2.2.1",
    "redis==5.0.1",
    "numpy==1.26.4",
    "scipy==1.12.0",
    "scikit-learn==1.4.0",
    "numpyro==0.14.0",
    "jax[cpu]==0.4.25",
    "lightgbm==4.3.0",
    "loguru==0.7.2",
    "python-dotenv==1.0.1",
    "fastapi==0.110.0",
    "uvicorn==0.27.1",
    "jinja2==3.1.3",
    "certifi>=2024.0.0",
]

[project.optional-dependencies]
backtest = [
    "pandas>=2.0",
    "pyarrow>=14.0",
]
dev = [
    "pytest==8.1.0",
    "pytest-asyncio==0.23.5",
    "pytest-mock==3.12.0",
    "pytest-timeout==2.3.1",
    "httpx==0.27.0",
    "ruff==0.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "integration: marks tests that require local integration infrastructure",
]
filterwarnings = [
    "ignore:Jupyter is migrating its paths to use standard platformdirs:DeprecationWarning:jupyter_client.connect",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
