[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-bot"
version = "0.2.0"
description = "Polymarket Leader Intelligence Engine — identify, profile, and trade with/against volume leaders"
requires-python = ">=3.11"
dependencies = [
    "asyncpg==0.29.0",
    "aiohttp==3.9.3",
    "websockets==12.0",
    "pydantic==2.6.0",
    "pydantic-settings==2.2.1",
    "redis==5.0.1",
    "numpy==1.26.4",
    "scipy==1.12.0",
    "scikit-learn==1.4.0",
    "numpyro==0.14.0",
    "jax[cpu]==0.4.25",
    "lightgbm==4.3.0",
    "loguru==0.7.2",
    "python-dotenv==1.0.1",
    "fastapi==0.110.0",
    "uvicorn==0.27.1",
    "jinja2==3.1.3",
    "certifi>=2024.0.0",
    # Live trading on Polymarket (S2.6). Sync SDK; we wrap calls in
    # run_in_executor to keep the engine asyncio-friendly.
    "py-clob-client==0.17.5",
    # Telegram bot (S3.9). Async-native long-polling for ops alerts +
    # interactive commands. See src/telegram_bot/.
    "python-telegram-bot==21.10",
    # APScheduler (S3.10). AsyncIOScheduler drives all periodic work
    # (nightly batch, heartbeat watchdog, market refresh, killswitch
    # sync, Redis cleanup). 3.10.x is the stable line; 4.x is alpha.
    "apscheduler==3.10.4",
    # boto3 (S4.12). S3-compatible client used to push pg_dump
    # archives to Cloudflare R2. Sync API — that's fine, the backup
    # service is a stand-alone process with one job/night.
    "boto3==1.34.69",
    # Prometheus metrics (Phase 1 Task M). Single-process registry; the
    # /metrics endpoint is scraped over LAN. See docs/audit/phase1/
    # M_metrics_foundation.md for the full contract.
    "prometheus-client==0.20.0",
    # Round 6 — On-chain CLOB ingestion (src/onchain/). eth-abi is the
    # minimal log decoder we need; the full web3.py stack would pull
    # tens of transitive deps for no upside since the listener only
    # decodes inbound logs (no contract calls / tx building). The
    # pycryptodome extra wires the keccak backend used to compute
    # event topic-0 hashes at module import.
    "eth-abi>=4.0,<6.0",
    "eth-hash[pycryptodome]>=0.5.0,<1.0",
]

[project.optional-dependencies]
backtest = [
    "pandas>=2.0",
    "pyarrow>=14.0",
]
dev = [
    "pytest==8.1.0",
    "pytest-asyncio==0.23.5",
    "pytest-mock==3.12.0",
    "pytest-timeout==2.3.1",
    "httpx==0.27.0",
    "ruff==0.3.0",
    # In-memory Redis with full pub/sub support — used by S2.8 integration
    # tests to wire ConfidenceEngine + DecisionRouter + PaperTrader +
    # LiveTrader together without spinning up Docker.
    "fakeredis>=2.30.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "integration: marks tests that require local integration infrastructure",
]
filterwarnings = [
    "ignore:Jupyter is migrating its paths to use standard platformdirs:DeprecationWarning:jupyter_client.connect",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
