[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poybot-backend"
version = "0.1.0"
description = "Backend foundation for Polymarket intelligence platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "websockets>=12.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "sqlalchemy[asyncio]>=2.0.31",
  "asyncpg>=0.29.0",
  "alembic>=1.13.2",
  "redis>=5.0.7",
  "arq>=0.26.0",
  "python-json-logger>=2.0.7",
  "greenlet>=3.0.3",
  "aiosqlite>=0.20.0",
  "orjson>=3.10.7",
  "reportlab>=4.2.2",
  "openpyxl>=3.1.5",
  "py-clob-client"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8",
  "pytest-cov>=5.0.0",
  "asgi-lifespan>=2.1.0",
  "anyio>=4.4.0",
  "black>=24.8.0",
  "ruff>=0.5.7",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
packages = ["app"]
